fix: unvisible inputs on mobile devices

--- a/assets/scss/components/_interest.scss
+++ b/assets/scss/components/_interest.scss
@@ -57,8 +57,7 @@
         cursor: pointer;
         border-radius: 50px;
         background: linear-gradient(145deg, #ffffff, #dddddd);
-box-shadow:  20px 20px 20px #d0d0d0, 
-             -20px -20px 20px #ffffff;
+        box-shadow:  20px 20px 20px #d0d0d0, -20px -20px 20px #ffffff;
         padding: 2rem 3rem;
         transition: 0.2s;
     }
@@ -90,8 +89,7 @@ box-shadow:  20px 20px 20px #d0d0d0,
 
         &:checked + .c-interest__label {
             background: #f5f5f5;
-            box-shadow: inset 20px 20px 20px #d0d0d0, 
-                        inset -20px -20px 20px #ffffff;
+            box-shadow: inset 20px 20px 20px #d0d0d0, inset -20px -20px 20px #ffffff;
         }
     }
 
@@ -121,18 +119,15 @@ box-shadow:  20px 20px 20px #d0d0d0,
         font-size: 1.2rem;
         border-radius: 50px;
         background: linear-gradient(145deg, #ffffff, #dddddd);
-box-shadow:  20px 20px 20px #d0d0d0, 
-             -20px -20px 20px #ffffff;
-        border: none;
+        box-shadow:  20px 20px 20px #d0d0d0, -20px -20px 20px #ffffff;
+        border: 0;
         transition: 0.2s;
         width: 100%;
 
         &:focus {
             background: #f5f5f5;
-            box-shadow: inset 20px 20px 20px #d0d0d0, 
-                        inset -20px -20px 20px #ffffff;
+            box-shadow: inset 20px 20px 20px #d0d0d0, inset -20px -20px 20px #ffffff;
         }
-
     }
 
     &__textarea-label {
